--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply bg-slate-900;
+  }
+  img {
+    @apply w-auto h-auto;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components {
+  /* About Section */
+  .row {
+    @apply flex justify-between relative flex-wrap gap-y-8 xl:flex-nowrap;
+  }
+}
+
+@layer components {
+  .gradient-text {
+    @apply bg-gradient-to-r from-purple-600 to-amber-500 text-transparent bg-clip-text;
+  }
+  .blur-circle {
+    @apply bg-cyan-500 w-[250px] h-[250px] rounded-full opacity-75 blur-3xl absolute -z-50;
+  }
+  .top-dash {
+    /* Parent should be relative positioned */
+    @apply before:content-[''] before:absolute before:-top-4 before:bg-gradient-to-r before:from-purple-600 before:to-amber-500  before:w-12 before:h-1;
+  }
 }
